demp-app/deployment-pvc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: node-app
    env: dev
  name: pod-node-app
  namespace: ns-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-app
      env: dev
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: node-app
        env: dev
    spec:
      containers:
        - env:
            - name: NODE_ENV
              value: development
            - name: PORT
              value: "9000"
            - name: HTTP_LOGGING
              value: "true"
            - name: COMPRESSION
              value: "true"
          image: pavanmakadia/node-app:demo
          imagePullPolicy: IfNotPresent # Always
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: 9000
              scheme: HTTP
            initialDelaySeconds: 15
            periodSeconds: 8
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: 9000
              scheme: HTTP
            initialDelaySeconds: 15
            periodSeconds: 8
          name: pod-node-app
          ports:
            - containerPort: 9000
              name: http
              protocol: TCP
          resources:
            limits:
              cpu: 1
              memory: 1024Mi
            requests:
              cpu: 100m
              memory: 512Mi
          volumeMounts:
            - mountPath: /data
              name: data-volume
            - mountPath: /app/config.json
              name: configfile
              subPath: config.json
      volumes:
        # - emptyDir: {}
        #   name: cache-volume
        - name: data-volume
          persistentVolumeClaim:
            claimName: pvc-node-app
        - configMap:
            defaultMode: 420
            items:
              - key: config.json
                path: config.json
            name: cnf-configfile
          name: configfile
